--- a/Game_result.html
+++ b/Game_result.html
@@ -102,184 +102,178 @@
                 <!-- Card Body -->
                 <div class="card-body">
                   <div class="table-responsive">
-                    <style type="text/css">
-                    .tg-c3ow{border-color:inherit;text-align:center;vertical-align:top}
-                    .tg-7btt{border-color:inherit;font-weight:bold;text-align:center;vertical-align:top}
-                    .points_left td{border-color:black;}
-
-                    </style>
-                      <table class="tabularInput-table">
+                      <table class="Henkkari" id = "Henkkari">
                         <tr>
-                          <th class="tg-dvpl">1-puoli</th>
-                          <th class="tg-0pky">2-puoli</th>
-                          <th class="tg-0pky">mailat</th>
-                          <th class="tg-0pky" colspan="3" rowspan="6"></th>
+                          <th class="text">1-puoli</th>
+                          <th class="text">2-puoli</th>
+                          <th class="text">mailat</th>
+                          <th class="colspan" colspan="3" rowspan="6"></th>
                         </tr>
                         <tr>
-                          <td id = "a1" class="tg-0pky"><input type="number"></td>
-                          <td id = "b1" class="tg-0pky"><input type="number"></td>
+                          <td class="tg-0pky"><input type="number" class="afir achange"></td>
+                          <td class="tg-0pky"><input type="number" class="bfir bchange"></td>
                           <td class="tg-c3ow">20</td>
                         </tr>
                         <tr>
-                          <td id = "a2" class="tg-0pky"><input type="number"></td>
-                          <td id = "b2" class="tg-0pky"><input type="number"></td>
+                          <td class="tg-0pky"><input type="number" class="afir achange"></td>
+                          <td class="tg-0pky"><input type="number" class="bfir bchange"></td>
                           <td class="tg-c3ow">19</td>
                         </tr>
                         <tr>
-                          <td id = "a3" class="tg-0pky"><input type="number"></td>
-                          <td id = "b3" class="tg-0pky"><input type="number"></td>
+                          <td class="tg-0pky"><input type="number" class="afir achange"></td>
+                          <td class="tg-0pky"><input type="number" class="bfir bchange"></td>
                           <td class="tg-c3ow">18</td>
                         </tr>
                         <tr>
-                          <td id = "a4" class="tg-0pky"><input type="number"></td>
-                          <td id = "b4" class="tg-0pky"><input type="number"></td>
+                          <td class="tg-0pky"><input type="number" class="afir achange"></td>
+                          <td class="tg-0pky"><input type="number" class="bfir bchange"></td>
                           <td class="tg-c3ow">17</td>
                         </tr>
                         <tr class="points_left">
-                          <td id = "a5" class="tg-0pky"></td>
-                          <td id = "b5" class="tg-0pky"></td>
-                          <td class="tg-7btt">jäi</td>
+                          <td id = "afir"  value = 0 class="tg-0pky"></td>
+                          <td id = "bfir"  value = 0 class="tg-0pky"></td>
+                          <td class="text">jäi</td>
                         </tr>
                         <tr>
-                          <td class="tg-0pky"><input type="number"></td>
-                          <td class="tg-0pky"><input type="number"></td>
+                          <td class="tg-0pky"><input type="number" class="asec achange"></td>
+                          <td class="tg-0pky"><input type="number" class="bsec bchange"></td>
                           <td class="tg-c3ow">16</td>
-                          <td class="tg-0pky" colspan="3">Pelaajan nimi</td>
+                          <td class="tg-0pky text2" colspan="3">Pelaajan nimi</td>
                         </tr>
                         <tr>
-                          <td class="tg-0pky"><input type="number"></td>
-                          <td class="tg-0pky"><input type="number"></td>
+                          <td class="tg-0pky"><input type="number" class="asec achange"></td>
+                          <td class="tg-0pky"><input type="number" class="bsec bchange"></td>
                           <td class="tg-c3ow">15</td>
                           <td class="tg-0pky" colspan="3"><input type="text"></td>
                         </tr>
                         <tr>
-                          <td class="tg-0pky"><input type="number"></td>
-                          <td class="tg-0pky"><input type="number"></td>
+                          <td class="tg-0pky"><input type="number" class="asec achange"></td>
+                          <td class="tg-0pky"><input type="number" class="bsec bchange"></td>
                           <td class="tg-c3ow">14</td>
                           <td class="tg-0pky" colspan="3" rowspan="3"></td>
                         </tr>
                         <tr>
-                          <td class="tg-0pky"><input type="number"></td>
-                          <td class="tg-0pky"><input type="number"></td>
+                          <td class="tg-0pky"><input type="number" class="asec achange"></td>
+                          <td class="tg-0pky"><input type="number" class="bsec bchange"></td>
                           <td class="tg-c3ow">13</td>
                         </tr>
                         <tr>
-                          <td class="tg-0pky"></td>
-                          <td class="tg-0pky"></td>
-                          <td class="tg-7btt">jäi<br></td>
+                          <td id = "asec" value = 0 class="tg-0pky"></td>
+                          <td id = "bsec" value = 0 class="tg-0pky"></td>
+                          <td class="text">jäi<br></td>
                         </tr>
                         <tr>
-                          <td class="tg-0pky"><input type="number"></td>
-                          <td class="tg-0pky"><input type="number"></td>
+                          <td class="tg-0pky"><input type="number" class="athi achange"></td>
+                          <td class="tg-0pky"><input type="number" class="bthi bchange"></td>
                           <td class="tg-c3ow">12</td>
-                          <td class="tg-0pky" colspan="3">Pelaajan seura</td>
+                          <td class="tg-0pky text2" colspan="3">Pelaajan seura</td>
                         </tr>
                         <tr>
-                          <td class="tg-0pky"><input type="number"></td>
-                          <td class="tg-0pky"><input type="number"></td>
+                          <td class="tg-0pky"><input type="number" class="athi achange"></td>
+                          <td class="tg-0pky"><input type="number" class="bthi bchange"></td>
                           <td class="tg-c3ow">11</td>
                           <td class="tg-0pky" colspan="3"><input type="text"></td>
                         </tr>
                         <tr>
-                          <td class="tg-0pky"><input type="number"></td>
-                          <td class="tg-0pky"><input type="number"></td>
+                          <td class="tg-0pky"><input type="number" class="athi achange"></td>
+                          <td class="tg-0pky"><input type="number" class="bthi bchange"></td>
                           <td class="tg-c3ow">10</td>
                           <td class="tg-0pky" colspan="3" rowspan="3"></td>
                         </tr>
                         <tr>
-                          <td class="tg-0pky"><input type="number"></td>
-                          <td class="tg-0pky"><input type="number"></td>
+                          <td class="tg-0pky"><input type="number" class="athi achange"></td>
+                          <td class="tg-0pky"><input type="number" class="bthi bchange"></td>
                           <td class="tg-c3ow">9</td>
                         </tr>
                         <tr>
-                          <td class="tg-0pky"></td>
-                          <td class="tg-0pky"></td>
-                          <td class="tg-7btt">jäi</td>
+                          <td id = "athi" value = 0 class="tg-0pky"></td>
+                          <td id = "bthi" value = 0 class="tg-0pky"></td>
+                          <td class="text">jäi</td>
                         </tr>
                         <tr>
-                          <td class="tg-0pky"><input type="number"></td>
-                          <td class="tg-0pky"><input type="number"></td>
+                          <td class="tg-0pky"><input type="number" class="afou achange"></td>
+                          <td class="tg-0pky"><input type="number" class="bfou bchange"></td>
                           <td class="tg-c3ow">8</td>
-                          <td class="tg-0pky" colspan="3">Pelaajan sarja</td>
+                          <td class="tg-0pky text2" colspan="3">Pelaajan sarja</td>
                         </tr>
                         <tr>
-                          <td class="tg-0pky"><input type="number"></td>
-                          <td class="tg-0pky"><input type="number"></td>
+                          <td class="tg-0pky"><input type="number" class="afou achange"></td>
+                          <td class="tg-0pky"><input type="number" class="bfou bchange"></td>
                           <td class="tg-c3ow">7</td>
                           <td class="tg-0pky" colspan="3"><input type="text"></td>
                         </tr>
                         <tr>
-                          <td class="tg-0pky"><input type="number"></td>
-                          <td class="tg-0pky"><input type="number"></td>
+                          <td class="tg-0pky"><input type="number" class="afou achange"></td>
+                          <td class="tg-0pky"><input type="number" class="bfou bchange"></td>
                           <td class="tg-c3ow">6</td>
                           <td class="tg-0pky" colspan="3" rowspan="3"></td>
                         </tr>
                         <tr>
-                          <td class="tg-0pky"><input type="number"></td>
-                          <td class="tg-0pky"><input type="number"></td>
+                          <td class="tg-0pky"><input type="number" class="afou achange"></td>
+                          <td class="tg-0pky"><input type="number" class="bfou bchange"></td>
                           <td class="tg-c3ow">5</td>
                         </tr>
                         <tr>
-                          <td class="tg-0pky"></td>
-                          <td class="tg-0pky"></td>
-                          <td class="tg-7btt">jäi<br></td>
+                          <td id = "afou" value = 0 class="tg-0pky"></td>
+                          <td id = "bfou" value = 0 class="tg-0pky"></td>
+                          <td class="text">jäi<br></td>
                         </tr>
                         <tr>
-                          <td class="tg-0pky"><input type="number"></td>
-                          <td class="tg-0pky"><input type="number"></td>
+                          <td class="tg-0pky"><input type="number" class="afif achange"></td>
+                          <td class="tg-0pky"><input type="number" class="bfif bchange"></td>
                           <td class="tg-c3ow">4</td>
-                          <td class="tg-0pky" colspan="3">Lyöty tulos:<br></td>
+                          <td class="tg-0pky text" colspan="3">Lyöty tulos:<br></td>
                         </tr>
                         <tr>
-                          <td class="tg-0pky"><input type="number"></td>
-                          <td class="tg-0pky"><input type="number"></td>
+                          <td class="tg-0pky"><input type="number" class="afif achange"></td>
+                          <td class="tg-0pky"><input type="number" class="bfif bchange"></td>
                           <td class="tg-c3ow">3<br></td>
-                          <td class="tg-0pky" colspan="3"><input type="number"></td>
+                          <td id = "result" class="tg-0pky" colspan="3"></td>
                         </tr>
                         <tr>
-                          <td class="tg-0pky"><input type="number"></td>
-                          <td class="tg-0pky"><input type="number"></td>
+                          <td class="tg-0pky"><input type="number" class="afif achange"></td>
+                          <td class="tg-0pky"><input type="number" class="bfif bchange"></td>
                           <td class="tg-c3ow">2</td>
-                          <td class="tg-0pky" colspan="3">Ikähyvitys:</td>
+                          <td class="tg-0pky text2" colspan="3">Ikähyvitys:</td>
                         </tr>
                         <tr>
-                          <td class="tg-0pky"><input type="number"></td>
-                          <td class="tg-0pky"><input type="number"></td>
+                          <td class="tg-0pky"><input type="number" class="afif achange"></td>
+                          <td class="tg-0pky"><input type="number" class="bfif bchange"></td>
                           <td class="tg-c3ow">1</td>
-                          <td class="tg-0pky" colspan="3"><input type="number"></td>
+                          <td class="tg-0pky" colspan="3"><input id = "age_help" type="number" class = "change"></td>
                         </tr>
                         <tr>
-                          <td class="tg-0pky"></td>
-                          <td class="tg-0pky"></td>
-                          <td class="tg-7btt">jäi</td>
-                          <td class="tg-0pky" colspan="3">Lopputulos:<br></td>
+                          <td id = "afif" value = 0 class="tg-0pky"></td>
+                          <td id = "bfif" value = 0 class="tg-0pky"></td>
+                          <td class="text">jäi</td>
+                          <td class="tg-0pky text" colspan="3">Lopputulos:<br></td>
                         </tr>
                         <tr>
-                          <td class="tg-0pky"></td>
-                          <td class="tg-0pky"></td>
-                          <td class="tg-c3ow">tulos</td>
-                          <td class="tg-0pky" colspan="3"><input type="number"></td>
+                          <td id = "aresu" class="tg-0pky"></td>
+                          <td id = "bresu" class="tg-0pky"></td>
+                          <td class="text">tulos</td>
+                          <td id = "end_result" class="tg-0pky" colspan="3"></td>
                         </tr>
                         <tr>
-                          <td class="tg-0pky"></td>
-                          <td class="tg-0pky"></td>
-                          <td class="tg-c3ow">hudit</td>
-                          <td class="tg-0pky">yht.</td>
-                          <td class="tg-0pky"><input type="number"></td>
+                          <td id = "azeros" class="tg-0pky"></td>
+                          <td id = "bzeros" class="tg-0pky"></td>
+                          <td class="text">hudit</td>
+                          <td class="tg-0pky text">yht.</td>
+                          <td id = "all_zeros" class="tg-0pky"></td>
                           <td class="tg-0pky"></td>
                         </tr>
                         <tr>
-                          <td class="tg-0pky"></td>
-                          <td class="tg-0pky"></td>
-                          <td class="tg-c3ow">akat</td>
-                          <td class="tg-0pky">Pelaaja</td>
+                          <td id = "aakat" class="tg-0pky"></td>
+                          <td id = "bakat" class="tg-0pky"></td>
+                          <td class="text">akat</td>
+                          <td class="tg-0pky text2">Pelaaja</td>
                           <td class="tg-0pky" colspan="2"><input type="text"></td>
                         </tr>
                         <tr>
-                          <td class="tg-0pky"></td>
-                          <td class="tg-0pky"></td>
-                          <td class="tg-c3ow">papit</td>
-                          <td class="tg-0pky">Tuomari</td>
+                          <td class="tg-0pky"><input type="number" class="apapi change"></td>
+                          <td class="tg-0pky"><input type="number" class="bpapi change"></td>
+                          <td class="text">papit</td>
+                          <td class="tg-0pky text2">Tuomari</td>
                           <td class="tg-0pky" colspan="2"><input type="text"></td>
                         </tr>
                       </table>
