--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>Tilastot</span></a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="Game_result.html">
+          <i class="fas fa-fw fa-calendar-alt"></i>
+          <span>Pöytäkirja</span></a>
+      </li>
 
       <!-- Divider -->
       <hr class="sidebar-divider d-none d-md-block">
